Login screen and validation successfully  created. Home screen and splash screen ui complete. --->19/07/2023

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'myevents.example.com'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "myevents.example.com"
         minSdk 16
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +30,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    buildFeatures {
+        viewBinding true
     }
 }
 
